Fixed dots overlap over products when carousel is used

--- a/view/frontend/web/css/source/components/_carousel.less
+++ b/view/frontend/web/css/source/components/_carousel.less
@@ -10,7 +10,7 @@
                 scroll-behavior: smooth;
                 scroll-snap-type: x mandatory;
                 margin-bottom: 0;
-                padding-bottom: 10px;
+                padding-bottom: 40px;
                 .bz-scrollbar();
             }
 
